--- a/style.css
+++ b/style.css
@@ -1,7 +1,68 @@
-h1{
-    text-align: center;
-
+body {
+    font-family: 'Poppins', sans-serif;
+    background-color: white;
 }
 
+h1 {
+    text-align: center;
+    font-weight: bolder;
+    font-size: 25px;
+    color: black;
+}
 
+nav {
+    display: flex;
+    align-items: center;
+    border-bottom: 7px solid #eeeded;
+    position: relative;
+}
 
+.left-elements {
+    display: flex; 
+    align-items: center;
+}
+
+.element1, .element2 {
+    color: black;
+    padding: 10px;
+    margin-left: 10px;
+}
+
+.title {
+    color: black;
+    text-align: center;
+    flex-grow: 1; /* Ensures the title takes up space */
+    position: absolute;
+    left: 50%; /* Moves the title to the center of the nav bar */
+    transform: translateX(-50%); /* Corrects centering by shifting it left by 50% of its width */
+}
+
+#Insta{
+    width: 50px;
+    height: 50px;
+    margin-left: 1300px;
+}
+#Link{
+    width: 40px;
+    height: 40px;
+}
+#github{
+    width: 32px;
+    height: 32px;
+    padding-left: 10px;
+
+}
+.element3{
+    display: flex; /* Ensures the icons are aligned horizontally */
+    align-items: center;
+   
+}
+h2{
+    text-align: center;
+    font-size: 50px;
+    margin-top: 120px;
+}
+p{
+    text-align: center;
+    color: grey;
+} 
