--- a/style.css
+++ b/style.css
@@ -61,19 +61,29 @@ nav {
     background-color: #fff;
     text-align: center;
     margin-top: 80px; /* Added to compensate for the fixed header height */
+
 }
+
+.intro h2 {
+    font-size: 50px;
+    color: transparent;
+    background-image: linear-gradient(to right, #FF9933 15%,  rgb(21, 7, 151) 50%, #138808 50%);
+    -webkit-background-clip: text;
+    background-clip: text;
+    margin-bottom: 20px;
+}
+
+
 
 h2 {
     font-size: 50px;
     color: #333;
-    margin-bottom: 50px;
-    padding-left: 50px;
-    padding-bottom: 100px;
+    margin-bottom: 20px;
+   
 }
 
 #main-content {
     padding-top: 100px;
-    display: none; /* Initially hide the content */
 }
 
 .container {
@@ -114,7 +124,7 @@ p {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-/* Display main content after scrolling */
-#main-content:target {
-    display: block;
+h4{
+    text-align: center;
+    font-size: 11px;
 }
