--- a/Contact/style.css
+++ b/Contact/style.css
@@ -67,7 +67,7 @@ h1{
 }
 
 #button{
-    font-weight:500;
+    font-weight:600;
     font-size: medium;
      margin-top: 14px;
      margin-left: 400px;
@@ -75,4 +75,24 @@ h1{
      border-radius: 20px;
      width: 100px;
      height: 50px;
+     background-color: rgb(255, 196, 60);
+}
+
+.form-container{
+    display: flex;
+}
+
+
+#last{
+    width: 450px;
+    height: auto;
+    padding-bottom: 2px;
+    padding-left: 320px;
+}
+
+
+h5{
+    font-size: 25px;
+    font-weight: 600;
+    text-align: center;
 }
